crates/solverforge-macros/tests/ui/fail/planning_solution_missing_manifest.stderr
error[E0277]: the trait bound `Plan: solverforge::__internal::PlanningModelSupport` is not satisfied
 --> tests/ui/fail/planning_solution_missing_manifest.rs:9:1
  |
9 | #[planning_solution]
  | ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `solverforge::__internal::PlanningModelSupport` is not implemented for `Plan`
 --> tests/ui/fail/planning_solution_missing_manifest.rs:9:1
  |
9 | #[planning_solution]
  | ^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `::solverforge::__internal::PlanningSolutionImpl` which comes from the expansion of the attribute macro `planning_solution` (in Nightly builds, run with -Z macro-backtrace for more info)
